WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199299
macCatalyst: Selected range sometimes wrong after autocorrection
https://bugs.webkit.org/show_bug.cgi?id=199299
Summary
macCatalyst: Selected range sometimes wrong after autocorrection
Tim Horton
Reported
2019-06-27 16:38:15 PDT
macCatalyst: Selected range sometimes wrong after autocorrection
Attachments
Patch
(9.82 KB, patch)
2019-06-27 16:38 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-06-27 16:38:25 PDT
Created
attachment 373069
[details]
Patch
Tim Horton
Comment 2
2019-06-27 16:38:27 PDT
<
rdar://problem/49717224
>
WebKit Commit Bot
Comment 3
2019-06-28 13:14:55 PDT
Comment on
attachment 373069
[details]
Patch Clearing flags on attachment: 373069 Committed
r246932
: <
https://trac.webkit.org/changeset/246932
>
WebKit Commit Bot
Comment 4
2019-06-28 13:14:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug