macCatalyst: Selected range sometimes wrong after autocorrection https://bugs.webkit.org/show_bug.cgi?id=199299 <rdar://problem/49717224>

Reviewed by Wenson Hsieh.

* UIProcess/Cocoa/TextCheckingController.h:
* UIProcess/Cocoa/TextCheckingController.mm:
(WebKit::TextCheckingController::replaceRelativeToSelection):
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView replaceSelectionOffset:length:withAnnotatedString:relativeReplacementRange:]):
Plumb the whole relative replacement range through to the Web Content process.

* WebProcess/WebPage/Cocoa/TextCheckingControllerProxy.h:
* WebProcess/WebPage/Cocoa/TextCheckingControllerProxy.messages.in:
* WebProcess/WebPage/Cocoa/TextCheckingControllerProxy.mm:
(WebKit::TextCheckingControllerProxy::replaceRelativeToSelection):
Only replace the text of the substring that changed (the replacement range),
and fix up the selection offset math (it was really just wrong before).


Canonical link: https://commits.webkit.org/213263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246932 268f45cc-cd09-0410-ab3c-d52691b4dbfc