Source/WebKit/UIProcess/Cocoa/TextCheckingController.h
@@ -42,7 +42,7 @@ public:
     explicit TextCheckingController(WebPageProxy&);
     ~TextCheckingController() = default;
 
-    void replaceRelativeToSelection(NSAttributedString *annotatedString, int64_t selectionOffset, uint64_t length, bool textChanged);
+    void replaceRelativeToSelection(NSAttributedString *annotatedString, int64_t selectionOffset, uint64_t length, uint64_t relativeReplacementLocation, uint64_t relativeReplacementLength);
     void removeAnnotationRelativeToSelection(NSString *annotationName, int64_t selectionOffset, uint64_t length);
 
 private:
