Source/WebKit/WebProcess/WebPage/Cocoa/TextCheckingControllerProxy.h
@@ -64,7 +64,7 @@ private:
     Optional<RangeAndOffset> rangeAndOffsetRelativeToSelection(int64_t offset, uint64_t length);
 
     // Message handlers.
-    void replaceRelativeToSelection(AttributedString, int64_t selectionOffset, uint64_t length, bool textChanged);
+    void replaceRelativeToSelection(AttributedString, int64_t selectionOffset, uint64_t length, uint64_t relativeReplacementLocation, uint64_t relativeReplacementLength);
     void removeAnnotationRelativeToSelection(String annotationName, int64_t selectionOffset, uint64_t length);
 
     WebPage& m_page;
